# mini-agent

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
data/corpus/: agent_walkthrough.md  onboarding.md  payroll_calculations.md  relocation_policy.md
src/: app.py  config.py
src/graph/: build_graph.py  nodes.py  registry.py  state.py
src/guards/: policy.py
src/observability/: logging_config.py  telemetry.py
src/rag/: ingest.py  retriever.py
src/tools/: calculator.py  calendar.json  calendar_mock.py  slack.py
tests/: test_graph.py  test_guards.py  test_nodes.py  test_tools.py
